kubernetes/apps/longhorn-system/longhorn/app/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
spec:
  hostnames:
    - longhorn.cluster.local
  parentRefs:
    - name: cilium-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
